--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>4096 tile!</strong></p>
+      <p class="game-intro">Join the numbers and get the <strong>4096 tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
