--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <meta property="og:title" content="2048 game"/>
   <meta property="og:site_name" content="2048 game"/>
-  <meta property="og:description" content="Join the numbers and get to the 2048 tile! Careful: this game is extremely addictive!"/>
+  <meta property="og:description" content="JoinJoin the numbers and get to the 4097 tile! Careful: this game is extremely addictive!"/>
   <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
 </head>
 <body>
@@ -31,8 +31,8 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get the <strong>4096 tile!</strong></p>
-      <a class="restart-button">New Game</a>
+      <p class="game-intro">JoinJoin the numbers and get the <strong>4096 tile!</strong></p>
+      <a class="restart-button">New A Game</a>
     </div>
 
     <div class="game-container">
